fix padding on mobile - Get price

--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -107,7 +107,7 @@
     flex-wrap: wrap;
 
     @include mobile {
-      padding-left: 30;
+      padding-left: 30px;
     }
 
     @include tablet {
